--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "autoprefixer": "9",
     "postcss": "7",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
