--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://andyLucasa.github.io/React-TypeScript-E-fandray",
+  "homepage": "http://AndyLucasa.github.io/React-TypeScript-E-fandray",
   "name": "e-fandray",
   "version": "0.1.0",
   "private": true,
